# crypto-data-manager

./: .env.example  .gitignore  EXCHANGE_SYSTEM_PROMPT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TECH_DESIGN.md  create_postgresql.sh  docker-compose.yml
.trae/documents/: Explain asyncio.to_thread argument syntax.md  Fix Rate Limiting and Data Conflict Issues.md  Implement Real-time K-line Data Scheduler.md  Optimize Scheduler for Long-running Tasks.md  Save Technical Design to Markdown.md  Verify Real-time Data Updates.md
backend/: BINANCE_NETWORK_TROUBLESHOOTING.md  PG2PG_MIGRATION.md  POSTGRESQL_CONNECTION_FIX.md  PYTHON_VERSION_FIX.md  REDOC_TROUBLESHOOTING.md  TABLE_NAMING.md  UV_USAGE.md  binance_client.py  config.py  data.py  db-sqlite.py  db.py  download_klines.py  download_other.py  main.py  migrate.py  migrate_pg2pg.py  pyproject.toml  requirements.txt  scheduler_klines.py  symbols.py  ubuntu_postgresql15_script.sh
frontend/: Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: DataIntegrityChecker.tsx  DataMigration.tsx  DatabaseFileManager.tsx  DatabaseStats.tsx  DeleteForm.tsx  DownloadForm.tsx  EditDataForm.tsx  IPInfo.tsx  KlineChart.tsx  KlineViewer.tsx  OtherDataDownload.tsx  SymbolList.tsx  SymbolListWithChart.tsx
frontend/contexts/: TopGainersContext.tsx
frontend/lib/: api-config.ts  error-handler.ts
scripts/: check_sqlite.py  start-docker.sh  start-local.sh  start.sh
